[package]
name = "blog-os"
version = "0.1.0"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

